# Hackfest_SC

./: Cargo.toml  README.md
hackathon/: Cargo.toml
hackathon/src/: callback.rs  event.rs  external.rs  internal.rs  lib.rs  test.rs  utils.rs
res/: hackathon.wasm
scripts/: active_usdt.sh  build.sh  cancel_event.sh  claim.sh  create_event.sh  deploy.sh  get_all_event.sh  get_all_event_client.sh  get_sponsed.sh  more_sponse.sh  sponse_event.sh  sponse_native.sh  watch_event.sh
src/: callback.rs  event.rs  external.rs  internal.rs  lib.rs  utils.rs
