[package]
name = "hackathon"
version = "0.1.0"
edition = "2021"
author = ["Plats"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
near-units = "0.2.0"
uint = "0.9.5"
near-contract-standards = "4.0.0"